Task 598. 'Workshop Leave' link of workshop card layout when is visible has been fixed.

--- a/src/app/shared/components/workshop-card/workshop-card.component.scss
+++ b/src/app/shared/components/workshop-card/workshop-card.component.scss
@@ -71,9 +71,15 @@
   border-radius: 20px;
 }
 
+.card {
+  &_link {
+    margin-right: 0;
+  }
+}
+
 @media (max-width: 750px) {
 .horizontal-card {
-  min-height: 150px;  
+  min-height: 150px;
 
   .card_text {
     margin: 0;
